# CVProject

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
CVProject/: celery.py  settings.py  urls.py
main/: api_views.py  context_processors.py  middleware.py  models.py  serializers.py  tasks.py  tests.py  views.py
main/fixtures/: initial_cvs.json
main/migrations/: 0001_initial.py  0002_requestlog.py
main/templates/: base.html
main/templates/main/: cv_detail.html  cv_detail_pdf.html  cv_list.html  logs.html  settings.html
