[project]
name = "CVProject"
version = "1.0.0"
description = "django project"
authors = [
    {name = "imovchan"}
]
readme = "README.md"
requires-python = "3.10.12"
dependencies = [
    "django (>=5.2.1,<6.0.0)",
    "weasyprint (>=65.1,<66.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
