[project]
name = "CVProject"
version = "1.0.0"
description = "django project"
authors = [
    {name = "imovchan"}
]
readme = "README.md"
requires-python = "3.10.12"
dependencies = [
    "django (>=5.2.1,<6.0.0)",
    "weasyprint (>=65.1,<66.0)",
    "djangorestframework (>=3.16.0,<4.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
